Adding search-function, almost working

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <main>
         <h1>WELCOME NERD</h1>
+        <div id="search-container">
+            
+                <input type="text" placeholder="Search" id="user-search" />
+                <button type="submit" id="searchButton">SEARCH</button>
+        
+        </div>
+
         <div id="movie-container"> 
             <!-- content -->
         </div>
