--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </head>
 <body>
     <main>
-        <h1>WELCOME NERD</h1>
+        <h1>WELCOME MOVIE NERD</h1>
         <div id="search-container">
-            
-                <input type="text" placeholder="Search" id="user-search" />
-                <button type="submit" id="searchButton">SEARCH</button>
-        
+            <input type="text" placeholder="Search" id="user-search" />
+            <button type="submit" id="searchButton">SEARCH</button>
         </div>
 
         <div id="movie-container"> 
